force-app/main/default/objects/FieloPLT__Redemption__c/FieloPLT__Redemption__c.object-meta.xml
<CustomObject>
    <description>Redemptions are the orders generated by Members when they redeem their available Points for Rewards. Redemptions may include as many &quot;Redemptions Items&quot; as Rewards redeemed, as each Redemption Item represents a particular redeemed Reward.</description>
    <label>Redemption</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redemptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>