force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Description__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Description__c</fullName>
    <description>Redemption description.</description>
    <inlineHelpText>Enter Redemption description.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>