force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Member who performed the Redemption.</description>
    <inlineHelpText>Choose the Member for this Redemption.</inlineHelpText>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>