force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Origin__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Origin__c</fullName>
    <description>Source from which the Redemption is generated.</description>
    <inlineHelpText>Choose the source from which the Redemption is generated.</inlineHelpText>
    <label>Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BackEnd</fullName>
            </value>
            <value>
                <fullName>FrontEnd</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>