force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Points__c</fullName>
    <description>Points needed to redeem the Reward.</description>
    <inlineHelpText>Points needed to redeem the Reward.</inlineHelpText>
    <label>Points</label>
    <summarizedField>FieloPLT__RedemptionItem__c.FieloPLT__Points__c</summarizedField>
    <summaryFilterItems>
        <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
        <operation>notEqual</operation>
        <value>Reverted</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>