force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rule</label>
    <referenceTo>FieloPLT__Rule__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>