force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Status__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Status__c</fullName>
    <description>Redemption statuses. The available options are: Open, Closed, Pending and Rejected.</description>
    <inlineHelpText>Choose the Redemption status (Open, Closed, Pending or Rejected).</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Desqualificado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>