force-app/main/default/objects/FieloPLT__Redemption__c/fields/FieloPLT__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloPLT__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction completed only when a Redemption was generated by an Instant Reward.</description>
    <inlineHelpText>Choose a Transaction. Only completed when a Redemption was generated by an Instant Reward.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>FieloPLT__Transaction__c</referenceTo>
    <relationshipLabel>Redemptions</relationshipLabel>
    <relationshipName>Redemptions</relationshipName>
    <type>Lookup</type>
</CustomField>