force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_BetcoinsComp__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsComp__c</fullName>
    <description>Saldo de pontos gerado pela iniciativa Youbet Extra. Quando a iniciativa for criada, necessário renomear o rótulo do campo para &quot;Betcoins - Nome do Leilão&quot;.</description>
    <inlineHelpText>Saldo de pontos gerado pela iniciativa Youbet Extra. Quando a iniciativa for criada, necessário renomear o rótulo do campo para &quot;Betcoins - Nome do Leilão&quot;.</inlineHelpText>
    <label>Betcoins - Extra</label>
    <summarizedField>FieloPLT__RedemptionItem__c.V_BetcoinsComp__c</summarizedField>
    <summaryFilterItems>
        <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
        <operation>notEqual</operation>
        <value>Reverted</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>