force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_BetcoinsInvestidos__c.field-meta.xml
<CustomField>
    <fullName>V_BetcoinsInvestidos__c</fullName>
    <description>Betcoins consolidados em um único ponto (perene ou complementar). Campo a ser utilizado em front ends.</description>
    <formula>IF(
 FieloPLT__Points__c &gt; 0, FieloPLT__Points__c, V_BetcoinsComp__c 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Betcoins consolidados em um único ponto (perene ou complementar). Campo a ser utilizado em front ends.</inlineHelpText>
    <label>Betcoins Investidos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>