force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_LanceGanhador__c.field-meta.xml
<CustomField>
    <fullName>V_LanceGanhador__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lance Ganhador</label>
    <type>Checkbox</type>
</CustomField>