force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_LanceValido__c.field-meta.xml
<CustomField>
    <fullName>V_LanceValido__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lance Válido</label>
    <type>Checkbox</type>
</CustomField>