force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_MetaParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipante__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ano Fiscal</label>
    <referenceTo>VN_MetaParticipante__c</referenceTo>
    <relationshipLabel>Resgates/Lances</relationshipLabel>
    <relationshipName>Resgates_Lances</relationshipName>
    <type>Lookup</type>
</CustomField>