force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_MetaParticipanteFiscal__c.field-meta.xml
<CustomField>
    <fullName>V_MetaParticipanteFiscal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ano Fiscal OLD</label>
    <referenceTo>VN_MetasParticipantes__c</referenceTo>
    <relationshipLabel>Resgates/Lances</relationshipLabel>
    <relationshipName>Resgates_Lances</relationshipName>
    <type>Lookup</type>
</CustomField>