force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_QtdeLancesRealizados__c.field-meta.xml
<CustomField>
    <fullName>V_QtdeLancesRealizados__c</fullName>
    <description>Quantidade de lances realizados para este leilão.</description>
    <inlineHelpText>Quantidade de lances realizados para este leilão.</inlineHelpText>
    <label>Qtde Lances Realizados</label>
    <summaryFilterItems>
        <field>FieloPLT__RedemptionItem__c.FieloPLT__Status__c</field>
        <operation>equals</operation>
        <value>Ready</value>
    </summaryFilterItems>
    <summaryForeignKey>FieloPLT__RedemptionItem__c.FieloPLT__Redemption__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>