force-app/main/default/objects/FieloPLT__Redemption__c/fields/V_SaldodoParticipante__c.field-meta.xml
<CustomField>
    <fullName>V_SaldodoParticipante__c</fullName>
    <formula>FieloPLT__Member__r.FieloPLT__Points__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Saldo do Participante</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>