force-app/main/default/objects/FieloPLT__Redemption__c/validationRules/FieloPLT__ClosedRedemption.validationRule-meta.xml
<ValidationRule>
    <fullName>FieloPLT__ClosedRedemption</fullName>
    <active>false</active>
    <description>The Redemption order is closed.</description>
    <errorConditionFormula>AND(   ISPICKVAL(FieloPLT__Status__c, &apos;Closed&apos;) ,ISCHANGED(FieloPLT__Points__c) )</errorConditionFormula>
    <errorMessage>The Redemption order is closed.</errorMessage>
</ValidationRule>