force-app/main/default/objects/FieloPLT__Redemption__c/listViews/FieloPLT__All.listView-meta.xml
<ListView>
    <fullName>FieloPLT__All</fullName>
    <columns>NAME</columns>
    <columns>FieloPLT__Member__c</columns>
    <columns>V_BetcoinsInvestidos__c</columns>
    <columns>V_QtdeLancesRealizados__c</columns>
    <columns>FieloPLT__Status__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FieloPLT__Origin__c</field>
        <operation>equals</operation>
    </filters>
    <label>Todos os Lances</label>
    <language>en_US</language>
</ListView>